tests/typechecker/pass/027-subtype-fun.hyg
type MyInt = int;

fun makeFun(): (MyInt) -> MyInt = {
   fun double(x: int): int = 2 * x;
   double
};

assert((makeFun())(2) = 4)